--- a/_posts/2019-03-27-beach-hop.md
+++ b/_posts/2019-03-27-beach-hop.md
@@ -1,6 +1,6 @@
 ---
 title: Beach Hop
-meta_title:
+meta_title: A fun day at the Waihi Beach Hop 2019
 description:
 date: 2019-03-27 11:00:00
 summary_image: /uploads/blog/summary/56444250-2288484951410063-7253576992686080000-n.jpg
