Updated '_posts/2019-03-27-beach-hop.md' via CloudCannon

--- a/_posts/2019-03-27-beach-hop.md
+++ b/_posts/2019-03-27-beach-hop.md
@@ -5,8 +5,8 @@ description:
 date: 2019-03-27 11:00:00
 summary_image: /uploads/blog/summary/56416886-1769165996517302-346386273449017344-n.jpg
 photos:
-  - gallery_image:
-    title:
+  - gallery_image: /uploads/blog/gallery/56203722-2504401856271815-2284409082297188352-n.jpg
+    title: Looking at all the awesome cars!
   - gallery_image:
     title:
   - gallery_image:
