--- a/_posts/2019-03-27-beach-hop.md
+++ b/_posts/2019-03-27-beach-hop.md
@@ -11,7 +11,7 @@ photos:
     title:
   - gallery_image:
     title:
-  - gallery_image:
+  - gallery_image: /uploads/blog/gallery/56281608-1029621440561655-689990082400092160-n.jpg
     title:
   - gallery_image: /uploads/blog/gallery/56321793-1304701179676927-5705264599855529984-n.jpg
     title:
