Updated 2 files via CloudCannon

--- a/_posts/2019-03-27-beach-hop.md
+++ b/_posts/2019-03-27-beach-hop.md
@@ -9,7 +9,7 @@ photos:
     title: Looking at all the awesome cars!
   - gallery_image:
     title:
-  - gallery_image:
+  - gallery_image: /uploads/blog/gallery/56635103-809112899465566-4678563564078759936-n.jpg
     title:
   - gallery_image: /uploads/blog/gallery/56281608-1029621440561655-689990082400092160-n.jpg
     title:
