--- a/_posts/2019-03-27-beach-hop.md
+++ b/_posts/2019-03-27-beach-hop.md
@@ -7,7 +7,7 @@ summary_image: /uploads/blog/summary/56416886-1769165996517302-34638627344901734
 photos:
   - gallery_image: /uploads/blog/gallery/56203722-2504401856271815-2284409082297188352-n.jpg
     title: Looking at all the awesome cars!
-  - gallery_image:
+  - gallery_image: /uploads/blog/gallery/56418330-2242297109146914-7628102229706145792-n.jpg
     title:
   - gallery_image: /uploads/blog/gallery/56635103-809112899465566-4678563564078759936-n.jpg
     title:
