Updated 2 files via CloudCannon

--- a/_posts/2019-03-27-beach-hop.md
+++ b/_posts/2019-03-27-beach-hop.md
@@ -15,6 +15,8 @@ photos:
     title:
   - gallery_image: /uploads/blog/gallery/56321793-1304701179676927-5705264599855529984-n.jpg
     title:
+  - gallery_image: /uploads/blog/gallery/56229340-2152164974903491-4888960465582948352-n.jpg
+    title:
 embed_code:
 hero_image: /uploads/hero/56203722-2504401856271815-2284409082297188352-n.jpg
 _options:
@@ -34,5 +36,3 @@ _section_id: blog
 ---
 
 Today we took the children for a walk up to the Waihi Beach Hop. The children had a lovely time looking at all the awesome classic cars. Because walking is such thirsty and tiring work we had to stop in at Eaten Cafe for a fluffy and then at The Platter Board for something yummy to eat. When we got back to Footprints we were visited by two classic cars. The owners were very generous and allowed the children to climb inside them and have a look. Thanks everyone for making this a special day for the children.
-
-&nbsp;
