Updated 2 files via CloudCannon

--- a/_posts/2019-03-27-beach-hop.md
+++ b/_posts/2019-03-27-beach-hop.md
@@ -17,6 +17,8 @@ photos:
     title:
   - gallery_image: /uploads/blog/gallery/56229340-2152164974903491-4888960465582948352-n.jpg
     title:
+  - gallery_image: /uploads/blog/gallery/56679510-425105104725637-340118485940043776-n.jpg
+    title:
 embed_code:
 hero_image: /uploads/hero/56203722-2504401856271815-2284409082297188352-n.jpg
 _options:
